# build/swagger.json
@@ -160,6 +160,9 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "Invalid request params"
 					}
 				},
 				"tags": [
@@ -196,6 +199,12 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "Invalid request params"
+					},
+					"404": {
+						"description": "Not Found"
 					}
 				},
 				"tags": [
@@ -222,6 +231,12 @@
 				"responses": {
 					"204": {
 						"description": ""
+					},
+					"400": {
+						"description": "Invalid book id format"
+					},
+					"404": {
+						"description": "Not Found"
 					}
 				},
 				"tags": [
@@ -257,6 +272,12 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "Invalid request params"
+					},
+					"404": {
+						"description": "Not Found"
 					}
 				},
 				"tags": [
@@ -289,6 +310,12 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "Invalid request params"
+					},
+					"409": {
+						"description": "Already exists"
 					}
 				},
 				"tags": [
