# src/infrastructure/api/controllers/user/user.controller.ts
@@ -1,8 +1,9 @@
-import { Body, Controller, Post, Route, SuccessResponse, Tags } from "tsoa";
+import { Body, Controller, Post, Response, Route, SuccessResponse, Tags } from "tsoa";
 import { PostUserInputDto, PostUserOutputDto } from "./dto";
 import { createUserCodec } from "./user.codec";
 import SignInUserUseCase from "../../../../core/use-cases/sign-in-user.use-case";
 import SignUpUserUseCase from "../../../../core/use-cases/sign-up-user.use-case";
+import { ConflictError, InvalidInputError, NotFoundError } from "../../errro-handler";
 
 @Route('users')
 @Tags('Users')
@@ -14,19 +15,21 @@ export class UserController extends Controller {
 
     @Post('/signup')
     @SuccessResponse(200)
+    @Response(400, 'Invalid request params')
+    @Response(404, 'Not Found')
     async signup(
         @Body() requestBody: PostUserInputDto
     ): Promise<PostUserOutputDto> {
         const decodingResult = createUserCodec.decode(requestBody)
 
         if(!decodingResult.success) {
-            throw decodingResult.error.toString()
+            throw new InvalidInputError(decodingResult.error.toString())
         }
 
         const user = await new SignUpUserUseCase().execute(decodingResult.data)
 
         if(user === 'USER_ALREADY_EXISTS') {
-            throw 'USER_ALREADY_EXISTS'
+            throw new ConflictError('USER_ALREADY_EXISTS')
         }
 
         return user
@@ -34,13 +37,15 @@ export class UserController extends Controller {
 
     @Post('/signin')
     @SuccessResponse(200)
+    @Response(400, 'Invalid request params')
+    @Response(409, 'Already exists')
     async signin(
         @Body() requestBody: PostUserInputDto
     ): Promise<PostUserOutputDto> {
         const decodingResult = createUserCodec.decode(requestBody)
 
         if(!decodingResult.success) {
-            throw decodingResult.error.toString()
+            throw new InvalidInputError(decodingResult.error.toString())
         }
 
         const user = await new SignInUserUseCase().execute(
@@ -49,7 +54,7 @@ export class UserController extends Controller {
         )
 
         if(user === 'USER_NOT_FOUND') {
-            throw 'USER_NOT_FOUND'
+            throw new NotFoundError('USER_NOT_FOUND')
         }
 
         return user
